# rs_repro

./: Cargo.toml  README.md  example.parquet
src/: .main.rs.swp  main.rs
src/repro/: chunk_odds_as_even1.rs  chunk_odds_as_even2.rs  error_enum_lifetime_variants1.rs  error_iter_chain_mut_immut.rs  error_multilevel_impl_generic1.rs  error_multilevel_impl_generic2.rs  error_struct_field_access1.rs  error_vect_lifetime_ownership1.rs  groupby1.rs  impl_trait_arg1_concrete.rs  list_tup_to_list1a.rs  list_tup_to_list1b.rs  mod.rs  prop_trait_on_vect1.rs  vect_event_filter1.rs
src/repro_tracked/: mod.rs  repro000_parquet_read_write.rs  repro001_parquet_derive_example.rs  repro002_parquet_derive_read_example.rs  repro003_ron_read_write.rs  repro004_regex_tester.rs  repro005_cust_chunk_no_type.rs  repro006_slug_and_github_slugger.rs  repro006_sluggify_and_github_slugger.rs
