[package]
name = "rs_repro"
version = "0.1.0"
edition = "2024"

[features]
default = []
nontracked = []
repro000 = ["parquet", "parquet_derive"]
repro001 = ["parquet", "parquet_derive"]
repro002 = ["parquet", "parquet_derive"]

[dependencies]
itertools = { version = "0.14.0"}
tap = "1.0.1"


parquet = { version = "55.1.0", optional = true }
parquet_derive = { version = "55.1.0", optional = true}