[package]
name = "rs_repro"
version = "0.1.0"
edition = "2024"

[features]
default = []
nontracked = ["itertools", "tap"]

repro000 = ["parquet", "parquet_derive"]
repro001 = ["parquet", "parquet_derive"]
repro002 = ["parquet", "parquet_derive"]
repro003 = ["ron", "serde"]

[dependencies]
itertools = { version = "0.14.0", optional = true }
tap = { version = "1.0.1", optional = true }

parquet = { version = "55.1.0", optional = true }
parquet_derive = { version = "55.1.0", optional = true }

ron = { version = "0.10.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }