[package]
name = "rs_repro"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = { version = "0.14.0", optional = true }
tap = { version = "1.0.1", optional = true }

parquet = { version = "55.1.0", optional = true }
parquet_derive = { version = "55.1.0", optional = true }

ron = { version = "0.10.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

regex = { version = "1.11.1", optional = true }

clap = { version = "4.5.28", features = ["cargo"], optional = true }

lan_rs_common = { git = "https://github.com/LanHikari22/lan_rs_common", version = "0.1.0", features = [], optional = true }
slugify = { version = "0.1.0", optional = true }
github-slugger = { version = "0.1.0", optional = true }

[features]
default = []
nontracked = ["itertools", "tap"]
scratch = ["itertools", "tap"]

repro000 = ["parquet", "parquet_derive"]
repro001 = ["parquet", "parquet_derive"]
repro002 = ["parquet", "parquet_derive"]
repro003 = ["ron", "serde"]
repro004 = ["clap", "regex", "lan_rs_common"]
repro005 = []
repro006 = ["slugify", "github-slugger"]